--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,4 +1,10 @@
 
-.body__bold {
-    font-weight: bold;
-}
+/* Importation des fichiers du dossier body */
+@import "body/body.css";
+@import "body/cards.css";
+
+/* Importation des fichiers du dossier footer */
+@import "footer/footer.css";
+
+/* Importation des fichiers du dossier header */
+@import "header/header.css"
