--- a/src/css/header/header_mobile.css
+++ b/src/css/header/header_mobile.css
@@ -25,6 +25,7 @@
     height: 32px;
     flex-shrink: 0;
     margin-bottom: 19px;
+    margin-top : 19px;
 }
 
 .header__mobile {
@@ -34,5 +35,4 @@
     flex-shrink: 0;
     margin-top: -11px;
     margin-left: -8px;
-
 }
