--- a/src/css/style.css
+++ b/src/css/style.css
@@ -8,4 +8,10 @@
 
 /* Importation des fichiers du dossier header */
 @import "header/header.css";
-@import "header/header_mobile.css"
+@import "header/header_mobile.css";
+
+.html__class {
+    margin: 0px;
+    width: 393px;
+    height: 4303px;
+}
