--- a/src/css/body/body.css
+++ b/src/css/body/body.css
@@ -1,8 +1,3 @@
-.body {
-    margin-left: 8px;
-    margin-right: 2px;
-}
-
 .body__title {
     color: var(--Black-3, #030303);
     font-family: "Hammersmith One";
@@ -10,7 +5,10 @@
     font-style: normal;
     font-weight: 400;
     line-height: normal;
-
+    margin-left:8px;
+    margin-right: 8px;
+    margin-top: 35px;
+    margin-bottom: 17px;
 }
 
 .body__text {
@@ -20,7 +18,10 @@
     font-style: normal;
     font-weight: 400;
     line-height: normal;
-    margin-right:14px;
+    margin-right:8px;
+    margin-top:0px;
+    margin-bottom:16px;
+    margin-left:8px;
 }
 
 .body__little__title {
@@ -30,6 +31,10 @@
     font-style: normal;
     font-weight: 400;
     line-height: normal;
+    margin-left: 8px;
+    margin-top: 0px;
+    margin-right: 8px;
+    margin-bottom: 16px;
 }
 
 .body__bold {
@@ -40,6 +45,7 @@
     width: 351px;
     height: 251.34px;
     flex-shrink: 0;
-    margin-left: 13px;
-    margin-right:19px;
+    margin-left: 21px;
+    margin-right:21px;
+    margin-bottom: 15.66px;
 }
