--- a/src/css/body/cards.css
+++ b/src/css/body/cards.css
@@ -5,14 +5,13 @@
 }
 
 .card__img {
-    width: 327px;
-    height: 250px;
+    width: 100%;
+    height: auto;
 }
 
 .card__block {
     position: absolute;
     display: flex;
-    width: 282px;
     max-width: 282px;
     flex-direction: column;
     justify-content: center;
@@ -20,8 +19,13 @@
     border-radius: 1px;
     border: 1px solid #000;
     background: var(--Gray-1, #DDD);
-    margin-left:45px;
+    margin-left:23px;
     margin-top:-88px;
+    margin-right:23px;
+}
+
+.card__block > p{
+    width:100%;
 }
 
 .card__title {
@@ -61,7 +65,3 @@
     margin-left:10px;
 }
 
-.card__line {
-    width: 112px;
-    height: 1px;
-}
