--- a/src/css/header/header.css
+++ b/src/css/header/header.css
@@ -11,8 +11,8 @@
     font-weight: 800;
     line-height: normal;
     position: absolute;
-    margin-left: 61px;
-    margin-top: 43px;
+    margin-left: 20%;
+    margin-top: 10%;
     margin-right: 61px;
 }
 
@@ -25,13 +25,13 @@
 .header__title{
     color: var(--Gray-1, #DDD);
     font-family: "Hammersmith One";
-    font-size: 50px;
+    font-size: 35px;
     font-style: normal;
     font-weight: 400;
     line-height: normal;
     position : absolute;
-    margin-top: 60%;
-    margin-left: 30px;
+    margin-top: 70%;
+    margin-left: 15%;
     margin-bottom: 30px;
     margin-right: 45px;
 }
