--- a/src/css/body/body.css
+++ b/src/css/body/body.css
@@ -49,7 +49,7 @@
     font-style: normal;
     font-weight: 400;
     line-height: normal;
-    margin-left: 8px;
+    margin-left: 15px;
     margin-top: 0px;
     margin-right: 8px;
     margin-bottom: 16px;
@@ -70,15 +70,26 @@
 
 .body__semi__title {
     color: var(--Black-3, #030303);
-    font-family: "Fredoka";
-    font-size: 24px;
+    font-family: "Hammersmith One";
+    font-size: 25px;
     font-style: normal;
     font-weight: 400;
     line-height: normal;
     margin-left: 8px;
-    margin-top: 0px;
+    margin-top: 15px;
     margin-right: 8px;
     margin-bottom: 16px;
+}
+
+.body__small__text__under__img {
+    color: var(--Black-3, #030303);
+    font-family: Fredoka;
+    font-size: 15px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    margin-top: -10px;
+    margin-left: 36px;
 }
 
 .body__small__text {
@@ -88,8 +99,8 @@
     font-style: normal;
     font-weight: 400;
     line-height: normal;
-    margin-top: -10px;
-    margin-left: 36px;
+    margin-top: -2px;
+    margin-left: 10px;
 }
 
 .body__btn {
@@ -116,4 +127,11 @@
     font-weight: 700;
     line-height: normal;
     text-transform: uppercase;
+}
+
+.body__big__poster {
+    width:70%;
+    height: auto;
+    flex-shrink: 0;
+    margin-left: 15%;
 }
