--- a/src/css/body/carousel/J1/carousel3.css
+++ b/src/css/body/carousel/J1/carousel3.css
@@ -4,7 +4,7 @@
     max-width: 800px;
     overflow: hidden;
     border-radius: 10px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    box-shadow: 4px 4px 8px rgba(0, 0, 0, 0.2);
 }
 
 .carousel__3 {
