--- a/src/css/body/carousel/J2/carousel5.css
+++ b/src/css/body/carousel/J2/carousel5.css
@@ -22,7 +22,7 @@
     flex-shrink: 0;
 }
 
-button {
+button:not(.menu__btn):not(.menu__btn__cross) {
     position: absolute;
     transform: translateY(-50%);
     background-color: rgba(0, 0, 0, 0.5);
@@ -37,7 +37,7 @@ button {
     z-index: 9;
 }
 
-button:hover {
+button:not(.menu__btn):not(.menu__btn__cross):hover {
     background-color: #FE603F
 }
 
