--- a/src/css/body/body.css
+++ b/src/css/body/body.css
@@ -152,7 +152,7 @@
     line-height: normal;
     margin-left:8px;
     margin-top:-8px;
-    margin-bottom: 10px;
+    margin-bottom: 0px;
 }
 
 .body__questionnaire {
@@ -160,6 +160,6 @@
 }
 
 .body__line {
-    width:400px;
-    transform: translateX(-10px);
+    width:80%;
+    transform: translateX(-20px);
 }
